# src/route/routes.ts
@@ -6,6 +6,8 @@ import {  fetchMiddlewares, ExpressTemplateService } from '@tsoa/runtime';
 // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 import { UsuarioController } from './../controller/UsuarioController';
 // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+import { PedidoController } from './../controller/PedidoController';
+// WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 import { LivroController } from './../controller/LivroController';
 // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 import { EnderecoController } from './../controller/EnderecoController';
@@ -42,6 +44,36 @@ const models: TsoaRoute.Models = {
             "object": {"dataType":"any","required":true},
         },
         "additionalProperties": false,
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "FormaPagamento": {
+        "dataType": "refEnum",
+        "enums": ["PIX","CARTAO_CREDITO","BOLETO","TRANSFERENCIA"],
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "ItemPedidoRequestDto": {
+        "dataType": "refObject",
+        "properties": {
+            "livro_id": {"dataType":"double","required":true},
+            "quantidade": {"dataType":"double","required":true},
+        },
+        "additionalProperties": false,
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "PedidoRequestDto": {
+        "dataType": "refObject",
+        "properties": {
+            "usuario_id": {"dataType":"double","required":true},
+            "endereco_entrega_id": {"dataType":"double","required":true},
+            "forma_pagamento": {"ref":"FormaPagamento","required":true},
+            "itens": {"dataType":"array","array":{"dataType":"refObject","ref":"ItemPedidoRequestDto"},"required":true},
+        },
+        "additionalProperties": false,
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "PedidoStatus": {
+        "dataType": "refEnum",
+        "enums": ["PENDENTE","PROCESSANDO","ENVIADO","ENTREGUE","CANCELADO"],
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
     "LivroRequestDto": {
@@ -225,6 +257,135 @@ export function RegisterRoutes(app: Router) {
 
               await templateService.apiHandler({
                 methodName: 'removerUsuario',
+                controller,
+                response,
+                next,
+                validatedArgs,
+                successStatus: undefined,
+              });
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        const argsPedidoController_criarPedido: Record<string, TsoaRoute.ParameterSchema> = {
+                dto: {"in":"body","name":"dto","required":true,"ref":"PedidoRequestDto"},
+                fail: {"in":"res","name":"500","required":true,"ref":"BasicResponseDto"},
+                success: {"in":"res","name":"201","required":true,"ref":"BasicResponseDto"},
+        };
+        app.post('/pedidos',
+            ...(fetchMiddlewares<RequestHandler>(PedidoController)),
+            ...(fetchMiddlewares<RequestHandler>(PedidoController.prototype.criarPedido)),
+
+            async function PedidoController_criarPedido(request: ExRequest, response: ExResponse, next: any) {
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = templateService.getValidatedArgs({ args: argsPedidoController_criarPedido, request, response });
+
+                const controller = new PedidoController();
+
+              await templateService.apiHandler({
+                methodName: 'criarPedido',
+                controller,
+                response,
+                next,
+                validatedArgs,
+                successStatus: undefined,
+              });
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        const argsPedidoController_buscarPedidoPorId: Record<string, TsoaRoute.ParameterSchema> = {
+                id: {"in":"path","name":"id","required":true,"dataType":"double"},
+                fail: {"in":"res","name":"500","required":true,"ref":"BasicResponseDto"},
+                success: {"in":"res","name":"200","required":true,"ref":"BasicResponseDto"},
+        };
+        app.get('/pedidos/:id',
+            ...(fetchMiddlewares<RequestHandler>(PedidoController)),
+            ...(fetchMiddlewares<RequestHandler>(PedidoController.prototype.buscarPedidoPorId)),
+
+            async function PedidoController_buscarPedidoPorId(request: ExRequest, response: ExResponse, next: any) {
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = templateService.getValidatedArgs({ args: argsPedidoController_buscarPedidoPorId, request, response });
+
+                const controller = new PedidoController();
+
+              await templateService.apiHandler({
+                methodName: 'buscarPedidoPorId',
+                controller,
+                response,
+                next,
+                validatedArgs,
+                successStatus: undefined,
+              });
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        const argsPedidoController_listarPedidosPorUsuario: Record<string, TsoaRoute.ParameterSchema> = {
+                usuarioId: {"in":"path","name":"usuarioId","required":true,"dataType":"double"},
+                fail: {"in":"res","name":"500","required":true,"ref":"BasicResponseDto"},
+                success: {"in":"res","name":"200","required":true,"ref":"BasicResponseDto"},
+        };
+        app.get('/pedidos/usuario/:usuarioId',
+            ...(fetchMiddlewares<RequestHandler>(PedidoController)),
+            ...(fetchMiddlewares<RequestHandler>(PedidoController.prototype.listarPedidosPorUsuario)),
+
+            async function PedidoController_listarPedidosPorUsuario(request: ExRequest, response: ExResponse, next: any) {
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = templateService.getValidatedArgs({ args: argsPedidoController_listarPedidosPorUsuario, request, response });
+
+                const controller = new PedidoController();
+
+              await templateService.apiHandler({
+                methodName: 'listarPedidosPorUsuario',
+                controller,
+                response,
+                next,
+                validatedArgs,
+                successStatus: undefined,
+              });
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        const argsPedidoController_atualizarStatusPedido: Record<string, TsoaRoute.ParameterSchema> = {
+                id: {"in":"path","name":"id","required":true,"dataType":"double"},
+                body: {"in":"body","name":"body","required":true,"dataType":"nestedObjectLiteral","nestedProperties":{"status":{"ref":"PedidoStatus","required":true}}},
+                fail: {"in":"res","name":"500","required":true,"ref":"BasicResponseDto"},
+                success: {"in":"res","name":"200","required":true,"ref":"BasicResponseDto"},
+        };
+        app.put('/pedidos/:id/status',
+            ...(fetchMiddlewares<RequestHandler>(PedidoController)),
+            ...(fetchMiddlewares<RequestHandler>(PedidoController.prototype.atualizarStatusPedido)),
+
+            async function PedidoController_atualizarStatusPedido(request: ExRequest, response: ExResponse, next: any) {
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = templateService.getValidatedArgs({ args: argsPedidoController_atualizarStatusPedido, request, response });
+
+                const controller = new PedidoController();
+
+              await templateService.apiHandler({
+                methodName: 'atualizarStatusPedido',
                 controller,
                 response,
                 next,
